<resources>
    <string name="app_name">My Story 2</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="story_photo">story photo\n</string>
    <string name="image_description">image signup\n</string>
    <string name="hint_name">isi nama</string>
    <string name="hint_email">isi alamat email</string>
    <string name="hint_password">isi password</string>
    <string name="img_story">image story\n</string>
    <string name="title_story">judul cerita\n</string>
    <string name="add_photo">tambah foto</string>
    <string name="location_format">Location: (%1$.3f, %2$.3f)</string>
    <string name="form_error">Please fill in the form correctly</string>
    <string name="open_camera">Buka Kamera</string>
    <string name="open_gallery">Buka Galeri</string>
    <string name="no_media_selected">Tidak ada media yang dipilih</string>
    <string name="empty_image_warning">Pilih gambar terlebih dahulu</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_image_preview">Preview of the image to be uploaded</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="description_hint">Enter story description</string>
    <string name="upload_story">Upload Story</string>
    <string name="select_image_first">Please select an image first</string>
    <string name="description_empty">Description cannot be empty</string>
    <string name="upload_success">Story uploaded successfully</string>
    <string name="upload_error">Failed to upload story</string>
    <string name="upload_failed">Upload failed</string>
    <string name="permission_needed">Permission needed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="camera_permission_rationale">This app needs camera permission to take photos. Without this permission, you won\'t be able to capture new stories.</string>
    <string name="gallery_permission_rationale">This app needs storage permission to access your gallery. Without this permission, you won\'t be able to choose existing photos.</string>
    <string name="permission_rationale">This app needs certain permissions to function properly.</string>
    <string name="camera_permission_denied">Camera permission denied. You can\'t take photos.</string>
    <string name="gallery_permission_denied">Gallery permission denied. You can\'t choose photos.</string>
    <string name="permission_denied">Permissions not granted by the user</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="add_story">Add Story\n</string>
    <string name="maps">maps icon</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Coba lagi</string>
</resources>